[package]
name = "socksv5"
version = "0.2.0"
authors = ["Alexandre Kirszenberg <alex@kirszenberg.com>"]
edition = "2018"
description = "SOCKS v4a and v5 basic building blocks to build your own async SOCKS application"
license = "MIT OR Apache-2.0"
keywords = ["SOCKS", "SOCKS4a", "SOCKS5", "proxy", "async"]

[dependencies]
futures = "0.3.5"
thiserror = "1.0.19"
byteorder = "1.3.4"
